Prevent non-mobile-specific theme settings from showing on mobile; update settings section sort to be ft-select with only default and ascending options; adjust labels; adjust new controls' placement & appearance in settings

--- a/src/renderer/components/ft-icon-button/ft-icon-button.scss
+++ b/src/renderer/components/ft-icon-button/ft-icon-button.scss
@@ -84,6 +84,7 @@
 .iconFtButton {
   display: flex;
   gap: 10px;
+  inline-size: 100%;
 }
 
 .iconDropdown {
